grunt understanding environments and css working

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "jquery": "latest",
     "backbone-amd": "latest",
     "underscore-amd": "latest",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "backbone.marionette": "~2.2.1"
   }
 }
