--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "requirejs": "latest",
     "jquery": "latest",
-    "backbone-amd": "latest",
-    "underscore-amd": "latest",
+    "backbone": "latest",
+    "underscore": "latest",
     "bootstrap": "~3.2.0",
     "backbone.marionette": "~2.2.1"
   }
