--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "backbone": "latest",
     "underscore": "latest",
     "bootstrap": "~3.2.0",
-    "backbone.marionette": "~2.2.1"
+    "backbone.marionette": "~2.2.1",
+    "requirejs-underscore-tpl": "*",
+    "requirejs-text": "~2.0.13"
   }
 }
